# yei-cli

./: Cargo.toml  README.md
.github/workflows/: publish.yml
src/: config.rs  main.rs  registry.rs
src/commands/: add.rs  init.rs  list.rs  mod.rs  upgrade.rs  versions.rs
